force-app/main/default/objects/Asset__c/fields/ASM_Name__c.field-meta.xml
<CustomField>
    <fullName>ASM_Name__c</fullName>
    <formula>Salesman__r.L1_Approver__r.FirstName &amp; IF(ISBLANK(Salesman__r.L1_Approver__r.MiddleName), &quot;&quot;, &quot; &quot; &amp; Salesman__r.L1_Approver__r.MiddleName) &amp;
&quot; &quot; &amp; Salesman__r.L1_Approver__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Manager 1</label>
    <type>Text</type>
</CustomField>