force-app/main/default/objects/Asset__c/fields/Asset_Brand__c.field-meta.xml
<CustomField>
    <fullName>Asset_Brand__c</fullName>
    <formula>Product__r.Product_Brand__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Brand</label>
    <type>Text</type>
</CustomField>