force-app/main/default/objects/Asset__c/fields/Asset_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Asset_Capacity__c</fullName>
    <formula>Product__r.Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Capacity</label>
    <type>Text</type>
</CustomField>