force-app/main/default/objects/Asset__c/fields/Asset_Code__c.field-meta.xml
<CustomField>
    <fullName>Asset_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique code</description>
    <label>Asset Code</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>