force-app/main/default/objects/Asset__c/fields/Hub_Name__c.field-meta.xml
<CustomField>
    <fullName>Hub_Name__c</fullName>
    <formula>TEXT(Distributor_Name__r.Hub__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hub Name</label>
    <type>Text</type>
</CustomField>