force-app/main/default/objects/Asset__c/fields/Image_Link__c.field-meta.xml
<CustomField>
    <fullName>Image_Link__c</fullName>
    <label>Image Link</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>