force-app/main/default/objects/Asset__c/fields/Installed_Date__c.field-meta.xml
<CustomField>
    <fullName>Installed_Date__c</fullName>
    <label>Installed Date</label>
    <type>Date</type>
</CustomField>