force-app/main/default/objects/Asset__c/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <formula>Product__r.Model_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Model Name</label>
    <type>Text</type>
</CustomField>