force-app/main/default/objects/Asset__c/fields/New_Retailer_Code__c.field-meta.xml
<CustomField>
    <fullName>New_Retailer_Code__c</fullName>
    <formula>Retailer_Account__r.Retailer_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Retailer Code</label>
    <type>Text</type>
</CustomField>