force-app/main/default/objects/Asset__c/fields/Pin__c.field-meta.xml
<CustomField>
    <fullName>Pin__c</fullName>
    <formula>TEXT (Retailer_Account__r.Primary_PINCode__c)</formula>
    <label>Pin</label>
    <type>Text</type>
</CustomField>