force-app/main/default/objects/Asset__c/fields/Retailer__c.field-meta.xml
<CustomField>
    <fullName>Retailer__c</fullName>
    <formula>TEXT(Retailer_Account__r.Primary_PINCode__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer ZIP</label>
    <type>Text</type>
</CustomField>