force-app/main/default/objects/Asset__c/fields/Retailer_Account__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retailer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>