force-app/main/default/objects/Asset__c/fields/Retailer_Area__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Area__c</fullName>
    <formula>Retailer_Account__r.Primary_Address_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer Area</label>
    <type>Text</type>
</CustomField>