force-app/main/default/objects/Asset__c/fields/Retailer_code__c.field-meta.xml
<CustomField>
    <fullName>Retailer_code__c</fullName>
    <formula>Retailer_Account__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer code</label>
    <type>Text</type>
</CustomField>