force-app/main/default/objects/Asset__c/fields/Retailer_contact__c.field-meta.xml
<CustomField>
    <fullName>Retailer_contact__c</fullName>
    <formula>Retailer_Account__r.Owners_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer contact</label>
    <type>Text</type>
</CustomField>