force-app/main/default/objects/Asset__c/fields/Retailer_State__c.field-meta.xml
<CustomField>
    <fullName>Retailer_State__c</fullName>
    <formula>Retailer_Account__r.Primary_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer State</label>
    <type>Text</type>
</CustomField>