force-app/main/default/objects/Asset__c/fields/Retailer_type__c.field-meta.xml
<CustomField>
    <fullName>Retailer_type__c</fullName>
    <formula>TEXT(Retailer_Account__r.Outlets_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer type</label>
    <type>Text</type>
</CustomField>