force-app/main/default/objects/Asset__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Additional Freezer</fullName>
            </value>
            <value>
                <fullName>Old</fullName>
            </value>
            <value>
                <fullName>Scrapped</fullName>
            </value>
            <value>
                <fullName>Installed</fullName>
                <isActive>false</isActive>
                <label>Installed</label>
            </value>
            <value>
                <fullName>Obsolete</fullName>
                <isActive>false</isActive>
                <label>Obsolete</label>
            </value>
            <value>
                <fullName>Purchased</fullName>
                <isActive>false</isActive>
                <label>Purchased</label>
            </value>
            <value>
                <fullName>Registered</fullName>
                <isActive>false</isActive>
                <label>Registered</label>
            </value>
            <value>
                <fullName>Shipped</fullName>
                <isActive>false</isActive>
                <label>Shipped</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>