force-app/main/default/objects/Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Asset_Code__c</columns>
    <columns>Installed_Date__c</columns>
    <columns>Retailer_Account__c</columns>
    <columns>Product__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Installed_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Assets</label>
</ListView>